# AIWriter

./: .gitignore  AGENTS.md  README.md  TODO.md  anti-ai-detection-SKILL.md  greys_anatomy_ocr_sample.json  greys_parallel_sample.json  plan.md  pyproject.toml  session-log.md  updated-anti-ai-detection-SKILL.md  wonderfulwizard_ocr.json  wonderfulwizard_ocr_sample.json
.claude/: settings.local.json
backend/: app.py  deps.py  schemas.py
backend/routes/: export.py  jobs.py  pipeline.py  settings.py  sources.py  topics.py
docs/: THIRD_PARTY_LICENSES.md  future-upgrades.md  plan.md  workflow-gaps.md
essay_writer/: __init__.py
essay_writer/drafting/: __init__.py  anti_ai_rules.py  anti_ai_skill.py  prompts.py  revision.py  schema.py  service.py  storage.py  style_revision.py
essay_writer/exporting/: __init__.py  schema.py  service.py  storage.py
essay_writer/jobs/: __init__.py  schema.py  storage.py  workflow.py
essay_writer/outlining/: __init__.py  schema.py  service.py  storage.py
essay_writer/research/: __init__.py  prompts.py  schema.py  service.py  storage.py
essay_writer/research_planning/: __init__.py  schema.py  service.py  storage.py
essay_writer/sources/: __init__.py  access.py  access_schema.py  chunking.py  index.py  ingestion.py  lazy_ocr.py  manifest.py  map.py  schema.py  storage.py  summary.py
essay_writer/task_spec/: __init__.py  parser.py  prompts.py  schema.py  security.py  storage.py
essay_writer/topic_ideation/: __init__.py  context.py  prompts.py  retrieval.py  schema.py  service.py  storage.py
essay_writer/validation/: __init__.py  checks.py  citations.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
llm/: __init__.py  client.py  config.py  factory.py  logging_client.py  mock.py
pdf_pipeline/: __init__.py  cli.py  document_reader.py  models.py  modes.py  ocr.py  pipeline.py  text_utils.py
tests/: test_cli.py  test_document_reader_text.py  test_ocr_pipeline.py  test_pypdf_extractor.py  test_word_doc_extractor.py
(+153 files in other folders)
